# FedAvg_propio

./: .gitignore
fedavg/: Makefile  pyproject.toml
fedavg/configs/: default.yaml
fedavg/scripts/: run_examples.sh
fedavg/src/fedavg/: __init__.py  aggregator.py  cli.py  client.py  datasets.py  energy.py  metrics.py  models.py  partition.py  server.py  utils.py
fedavg/tests/: test_aggregator.py  test_partition.py
